--- a/app/views/_layouts.phtml
+++ b/app/views/_layouts.phtml
@@ -11,7 +11,7 @@
     <title>TapLink</title>
 
     <link rel="stylesheet" type="text/css" href="<?= config('view_static') ?>/static/styles/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="<?= config('view_static') ?>/static/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="<?= config('view_static') ?>/static/styles/style.css?v=<?= time()?>">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i|Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i,900,900i&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="<?= config('view_static') ?>/static/fonts/css/fontawesome-all.min.css">
@@ -21,14 +21,14 @@
     <script src="<?= config('view_static') ?>/static/plugins/sweetalert/sweetalert.min.js" type="text/javascript"></script>
 
 </head>
-<body class="theme-light" data-highlight="highlight-green" data-gradient="body-default">
+
+<body class="theme-light" data-highlight="highlight-blue" data-gradient="body-default">
 <div id="preloader">
     <div class="spinner-border color-highlight" role="status"></div>
 </div>
 <div id="page">
-    <div class="header header-fixed header-logo-center header-auto-show">
-        <a  class="header-title">TAPLINK Ecosystem</a>
-        <a  data-back-button class="header-icon header-icon-1"><i class="fas fa-arrow-left"></i></a>
+    <div class="header header-fixed header-logo-center">
+        <a id="logo"  class="header-title"><img src="<?= config('view_static') ?>/static/images/logo.png" height="38px" ></a>
     </div>
     <div id="footer-bar" class="footer-bar-1">
         <a href="<?= url('') ?>"><i class="fa fa-home"></i><span>Home</span></a>
