--- a/app/views/_non_layout.phtml
+++ b/app/views/_non_layout.phtml
@@ -21,7 +21,7 @@
     <script src="<?= config('view_static') ?>/static/plugins/sweetalert/sweetalert.min.js" type="text/javascript"></script>
 
 </head>
-<body class="theme-light" data-highlight="highlight-green" data-gradient="body-default">
+<body class="theme-light" data-highlight="highlight-blue" data-gradient="body-default">
 <div id="preloader">
     <div class="spinner-border color-highlight" role="status"></div>
 </div>
