--- a/public_html/static/styles/highlights/highlight_blue.css
+++ b/public_html/static/styles/highlights/highlight_blue.css
@@ -1,56 +1,56 @@
 /* Generating Color Pack*/
 .color-highlight {
-  color: #4A89DC !important;
+  color: #1204c4 !important;
 }
 
 .bg-highlight {
-  background-color: #4A89DC !important;
+  background-color: #1204c4 !important;
   color: #FFF !important;
 }
 
 .border-highlight {
-  border-color: #4A89DC !important;
+  border-color: #1204c4 !important;
 }
 
 .gradient-highlight {
-  background-image: linear-gradient(to bottom, #5D9CEC, #4A89DC) !important;
+  background-image: linear-gradient(to bottom, #5D9CEC, #1204c4) !important;
 }
 
 .footer-bar-2 .active-nav,
 .footer-bar-5 strong,
 .footer-bar-4 strong,
 .splide__pagination__page.is-active {
-  background-color: #4A89DC !important;
+  background-color: #1204c4 !important;
 }
 
 .footer-bar-1 .active-nav i,
 .footer-bar-1 .active-nav span,
 .footer-bar-3 .active-nav i {
-  color: #4A89DC !important;
+  color: #1204c4 !important;
 }
 
 .form-floating-over > .form-control:focus ~ label {
-  color: #4A89DC;
+  color: #1204c4;
 }
 
 .form-floating-over > .form-control:not(:placeholder-shown) ~ label {
-  color: #4A89DC;
+  color: #1204c4;
 }
 
 .form-floating-over > .form-select ~ label {
-  color: #4A89DC;
+  color: #1204c4;
 }
 
 .color-highlight {
-  color: #4A89DC;
+  color: #1204c4;
 }
 
 .bg-highlight {
-  background-color: #4A89DC;
+  background-color: #1204c4;
   color: #FFF !important;
 }
 
 .interest-check input:checked ~ label {
   color: #FFF !important;
-  background-color: #4A89DC !important;
+  background-color: #1204c4 !important;
 }
