--- a/app/views/_layouts.phtml
+++ b/app/views/_layouts.phtml
@@ -28,10 +28,10 @@
 </div>
 <div id="page">
     <div class="header header-fixed header-logo-center">
-        <a id="logo" href="<?= url(config('url.client').'/'.$uuid) ?>"  class="header-title"><img src="<?= config('view_static') ?>/static/images/logo.png" height="38px" ></a>
+        <a id="logo" href="<?= config('url.client').'/'.$uuid ?>"  class="header-title"><img src="<?= config('view_static') ?>/static/images/logo.png" height="38px" ></a>
     </div>
     <div id="footer-bar" class="footer-bar-1">
-        <a href="<?= url(config('url.client').'/'.$uuid) ?>"><i class="fa fa-home"></i><span>Home</span></a>
+        <a href="<?= config('url.client').'/'.$uuid ?>"><i class="fa fa-home"></i><span>Home</span></a>
         <a data-menu="menu-personal-list"><i class="fas fa-user-cog"></i></i><span>Person</span></a>
     </div>
     <?= $content ?>
